# zzz

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
src/: file_system.rs  lib.rs  main.rs  plugin_exports.rs  plugin_interface.rs  plugin_loader.rs  plugin_manager.rs  terminal.rs
src/components/: ai_assistant.rs  code_editor.rs  console_panel.rs  emulator_panel.rs  file_modal.rs  file_panel.rs  git_modal.rs  settings_modal.rs
src/components/ui/: context_menu.rs  modal.rs
src/core/: android_resources.rs  android_sdk_manager.rs  app_creation.rs  app_state.rs  constants.rs  downloader.rs  extension.rs  file_system.rs  git_manager.rs  ide.rs  lsp.rs  lsp_client.rs  lsp_server.rs  search.rs  syntax_highlighter.rs  terminal.rs
src/utils/: themes.rs
