[package]
name = "zzz"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
syntect = { version = "5.2.0", features = ["default-fancy"] }
log = "0.4.22"
serde = "1.0.209"
chrono = "0.4.38"
rfd = "0.14.1"
crossterm = "0.28.1"
tui = "0.19.0"

[lib]
name = "zzz"
path = "src/lib.rs"

[[bin]]
name = "zzz"
path = "src/main.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
