[package]
name = "zzz"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
syntect = "5.2.0"
log = "0.4.22"
serde = "1.0.209"
serde_json = "1.0.128"
chrono = "0.4.38"
rfd = "0.14.1"
crossterm = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
tower-lsp = "0.20.0"
lsp-types = "0.94.0"
image = "0.25.2"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"

[lib]
name = "zzz"
path = "src/lib.rs"

[[bin]]
name = "zzz"
path = "src/main.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
