[package]
name = "zzz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
egui = {version = "0.28.1", features = ["persistence"] }
eframe = "0.28.1"
syntect = "5.2.0"
log = "0.4.22"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
rfd = "0.14.1"
crossterm = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tower-lsp = "0.20.0"
lsp-types = "0.94.0"
image = "0.25.2"
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
nix = { version = "0.29.0", optional = true }
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "wincon"], optional = true }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
anyhow = "1.0.93"
notify = "7.0.0"
regex = "1.11.1"
jsonrpc-core = "18.0.0"
futures = "0.3.31"
directories = "6.0.0"
lazy_static = "1.5.0"
parking_lot = "0.12.3"
memmap2 = "0.9.5"
rayon = "1.10.0"
lru = "0.13.0"
tempfile = "3.16.0"
zip = "2.2.2"

[lib]
name = "zzz"
path = "src/lib.rs"

[[bin]]
name = "zzz"
path = "src/main.rs"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[features]
default = ["windows"]
unix = ["nix"]
windows = ["winapi"]

[build-dependencies]
winres = "0.1.12"